-
Type:
Bug
-
Resolution: Done
-
Priority:
Minor - P4
-
Affects Version/s: None
-
Component/s: Storage, WiredTiger
-
Environment:Identified on Linux.
-
Minor Change
-
ALL
-
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Creating a database whose name consists of a single ASCII control character will fail on wiredTiger when using directoryperdb. The resulting error message is:
2015-01-06T15:57:47.849-0500 E STORAGE [conn1] WiredTiger (22) [1420577867:849716][8582:0x7f7f6cee1700], session.create: Error parsing 'source="file:/collection-2--8284435167946820371.wt"' at byte 13: Unexpected character: Invalid argument
2015-01-06T15:57:47.849-0500 I - [conn1] Assertion: 2:22: Invalid argument
2015-01-06T15:57:47.850-0500 I WRITE [conn1] insert .col query:
ninserted:0 keyUpdates:0 exception: 22: Invalid argument code:2 249ms
Either disabling directoryperdb or using mmapv1 prevents this error from occurring.
- related to
-
SERVER-95530 Searching for conflicting DB names fails on non ASCII chars
-
- Open
-
-
SERVER-16765 WiredTiger accepts fewer characters in database names when using directoryperdb
-
- Closed
-