SERVER-16741 Add escape sequence to directoryperdb paths in KV Store